[tool.poetry]
name = "tesis"
version = "0.1.0"
description = ""
authors = ["lautalom <lautarolombardi19@gmail.com>"]
license = "GNU 3.9"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
scipy = "^1.13.0"
ipdb = "^0.13.13"
pytest = "^8.3.4"
pre-commit = "^4.0.1"
numba = "0.61"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
